// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ticket component Matches the snapshot 1`] = `
.emotion-38 {
  position: relative;
  z-index: 0;
  box-shadow: 0px 1px 4px rgba(91,137,164,0.25);
  border-radius: 5px;
  -webkit-transition: box-shadow 0.25s;
  transition: box-shadow 0.25s;
}

.emotion-38:hover,
.emotion-38:focus {
  outline: none;
  box-shadow: 0px 5px 25px rgba(91,137,164,0.1);
}

.emotion-38:hover .emotion-37,
.emotion-38:focus .emotion-37 {
  border-bottom: 3px solid #2196f3;
}

.emotion-38:after {
  content: "";
  width: 100%;
  height: 46px;
  position: absolute;
  box-shadow: 0px 10px 50px rgba(91,137,164,0.25);
  bottom: 0;
  left: 50%;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  z-index: -1;
  opacity: 0;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
  border-radius: 5px;
}

.emotion-38:hover:after,
.emotion-38:focus:after {
  content: "";
  width: 100%;
  height: 46px;
  position: absolute;
  box-shadow: 0px 10px 50px rgba(91,137,164,0.25);
  bottom: 0;
  left: 50%;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  z-index: -1;
  opacity: 1;
}

.emotion-36 {
  width: 100%;
  box-shadow: 0px 2px 8px rgba(0,0,0,0.1);
  border-radius: 5px;
  padding: 5px;
  margin-top: 20px;
  box-sizing: border-box;
  background-color: #fff;
  border-bottom: 3px solid transparent;
  -webkit-transition: border-bottom 0.25s;
  transition: border-bottom 0.25s;
}

.emotion-36:hover,
.emotion-36:focus {
  cursor: pointer;
  border-bottom: 3px solid #2196f3;
}

@media (min-width:960px) {
  .emotion-36 {
    width: 100%;
    box-shadow: 0px 2px 8px rgba(0,0,0,0.1);
    border-radius: 5px;
    padding: 20px;
    margin-top: 20px;
    box-sizing: border-box;
    background-color: #fff;
  }
}

.emotion-6 {
  width: 100%;
  height: 36px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  margin-left: 5px;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 24px;
  color: #2196f3;
}

@media (min-width:960px) {
  .emotion-0 {
    margin-left: 0;
  }
}

.emotion-4 {
  width: 140px;
  height: 36px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-2 {
  width: 99px;
  height: 36px;
  margin-right: 5px;
}

@media (min-width:960px) {
  .emotion-2 {
    margin-right: 0px;
  }
}

.emotion-20 {
  width: 100%;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
  margin-top: 20px;
}

.emotion-20:last-child {
  margin-top: 10px;
}

.emotion-8 {
  width: 33.3%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  height: 18px;
  color: #a0b0b9;
}

@media (min-width:960px) {
  .emotion-8 {
    width: 140px;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

.emotion-10 {
  width: 33.3%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  height: 21px;
  color: #4a4a4a;
}

@media (min-width:960px) {
  .emotion-10 {
    width: 140px;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media (min-width:960px) {
  .emotion-10 {
    font-size: 14px;
    height: 21px;
    color: #4a4a4a;
  }
}

<div
  className="emotion-38 emotion-39"
  tabIndex="0"
>
  <div
    className="emotion-36 emotion-37"
  >
    <div
      className="emotion-6 emotion-7"
    >
      <div
        className="emotion-0 emotion-1"
      >
        15 005 ₽
      </div>
      <picture
        className="emotion-4 emotion-5"
      >
        <source
          media="screen and (-webkit-min-device-pixel-ratio: 1.25), screen and ( min--moz-device-pixel-ratio: 1.25), screen and (-o-min-device-pixel-ratio: 1.25/1), screen and (min-device-pixel-ratio: 1.25), screen and ( min-resolution:
 200dpi), screen and ( min-resolution: 1.25dppx)"
          srcSet="https://pics.avs.io/99/36/TG@2x.png"
          type="image/png"
        />
        <img
          alt="Логотип авиакомпании"
          className="emotion-2 emotion-3"
          src="https://pics.avs.io/99/36/TG.png"
        />
      </picture>
    </div>
    <div
      className="emotion-20 emotion-21"
    >
      <div
        className="emotion-8 emotion-9"
      >
        MOW – HKT
      </div>
      <div
        className="emotion-10 emotion-11"
      >
        09:51 – 11:48
      </div>
      <div
        className="emotion-8 emotion-9"
      >
        В пути
      </div>
      <div
        className="emotion-10 emotion-11"
      >
        25ч 57м
      </div>
      <div
        className="emotion-8 emotion-9"
      >
        0 пересадок
      </div>
      <div
        className="emotion-10 emotion-11"
      >
        
      </div>
    </div>
    <div
      className="emotion-20 emotion-21"
    >
      <div
        className="emotion-8 emotion-9"
      >
        MOW – HKT
      </div>
      <div
        className="emotion-10 emotion-11"
      >
        14:39 – 03:11
      </div>
      <div
        className="emotion-8 emotion-9"
      >
        В пути
      </div>
      <div
        className="emotion-10 emotion-11"
      >
        12ч 32м
      </div>
      <div
        className="emotion-8 emotion-9"
      >
        3 пересадки
      </div>
      <div
        className="emotion-10 emotion-11"
      >
        BKK, AUH, HKG
      </div>
    </div>
  </div>
</div>
`;

exports[`Ticket component Matches the snapshot 2 1`] = `
.emotion-38 {
  position: relative;
  z-index: 0;
  box-shadow: 0px 1px 4px rgba(91,137,164,0.25);
  border-radius: 5px;
  -webkit-transition: box-shadow 0.25s;
  transition: box-shadow 0.25s;
}

.emotion-38:hover,
.emotion-38:focus {
  outline: none;
  box-shadow: 0px 5px 25px rgba(91,137,164,0.1);
}

.emotion-38:hover .emotion-37,
.emotion-38:focus .emotion-37 {
  border-bottom: 3px solid #2196f3;
}

.emotion-38:after {
  content: "";
  width: 100%;
  height: 46px;
  position: absolute;
  box-shadow: 0px 10px 50px rgba(91,137,164,0.25);
  bottom: 0;
  left: 50%;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  z-index: -1;
  opacity: 0;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
  border-radius: 5px;
}

.emotion-38:hover:after,
.emotion-38:focus:after {
  content: "";
  width: 100%;
  height: 46px;
  position: absolute;
  box-shadow: 0px 10px 50px rgba(91,137,164,0.25);
  bottom: 0;
  left: 50%;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  z-index: -1;
  opacity: 1;
}

.emotion-36 {
  width: 100%;
  box-shadow: 0px 2px 8px rgba(0,0,0,0.1);
  border-radius: 5px;
  padding: 5px;
  margin-top: 20px;
  box-sizing: border-box;
  background-color: #fff;
  border-bottom: 3px solid transparent;
  -webkit-transition: border-bottom 0.25s;
  transition: border-bottom 0.25s;
}

.emotion-36:hover,
.emotion-36:focus {
  cursor: pointer;
  border-bottom: 3px solid #2196f3;
}

@media (min-width:960px) {
  .emotion-36 {
    width: 100%;
    box-shadow: 0px 2px 8px rgba(0,0,0,0.1);
    border-radius: 5px;
    padding: 20px;
    margin-top: 20px;
    box-sizing: border-box;
    background-color: #fff;
  }
}

.emotion-6 {
  width: 100%;
  height: 36px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  margin-left: 5px;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 24px;
  color: #2196f3;
}

@media (min-width:960px) {
  .emotion-0 {
    margin-left: 0;
  }
}

.emotion-4 {
  width: 140px;
  height: 36px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-2 {
  width: 99px;
  height: 36px;
  margin-right: 5px;
}

@media (min-width:960px) {
  .emotion-2 {
    margin-right: 0px;
  }
}

.emotion-20 {
  width: 100%;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
  margin-top: 20px;
}

.emotion-20:last-child {
  margin-top: 10px;
}

.emotion-8 {
  width: 33.3%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  height: 18px;
  color: #a0b0b9;
}

@media (min-width:960px) {
  .emotion-8 {
    width: 140px;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

.emotion-10 {
  width: 33.3%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  height: 21px;
  color: #4a4a4a;
}

@media (min-width:960px) {
  .emotion-10 {
    width: 140px;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media (min-width:960px) {
  .emotion-10 {
    font-size: 14px;
    height: 21px;
    color: #4a4a4a;
  }
}

<div
  className="emotion-38 emotion-39"
  tabIndex="0"
>
  <div
    className="emotion-36 emotion-37"
  >
    <div
      className="emotion-6 emotion-7"
    >
      <div
        className="emotion-0 emotion-1"
      >
        500.00 €
      </div>
      <picture
        className="emotion-4 emotion-5"
      >
        <source
          media="screen and (-webkit-min-device-pixel-ratio: 1.25), screen and ( min--moz-device-pixel-ratio: 1.25), screen and (-o-min-device-pixel-ratio: 1.25/1), screen and (min-device-pixel-ratio: 1.25), screen and ( min-resolution:
 200dpi), screen and ( min-resolution: 1.25dppx)"
          srcSet="https://pics.avs.io/99/36/TG@2x.png"
          type="image/png"
        />
        <img
          alt="Логотип авиакомпании"
          className="emotion-2 emotion-3"
          src="https://pics.avs.io/99/36/TG.png"
        />
      </picture>
    </div>
    <div
      className="emotion-20 emotion-21"
    >
      <div
        className="emotion-8 emotion-9"
      >
        MOW – HKT
      </div>
      <div
        className="emotion-10 emotion-11"
      >
        09:51 – 11:48
      </div>
      <div
        className="emotion-8 emotion-9"
      >
        В пути
      </div>
      <div
        className="emotion-10 emotion-11"
      >
        25ч 57м
      </div>
      <div
        className="emotion-8 emotion-9"
      >
        0 пересадок
      </div>
      <div
        className="emotion-10 emotion-11"
      >
        
      </div>
    </div>
    <div
      className="emotion-20 emotion-21"
    >
      <div
        className="emotion-8 emotion-9"
      >
        MOW – HKT
      </div>
      <div
        className="emotion-10 emotion-11"
      >
        14:39 – 03:11
      </div>
      <div
        className="emotion-8 emotion-9"
      >
        В пути
      </div>
      <div
        className="emotion-10 emotion-11"
      >
        12ч 32м
      </div>
      <div
        className="emotion-8 emotion-9"
      >
        3 пересадки
      </div>
      <div
        className="emotion-10 emotion-11"
      >
        BKK, AUH, HKG
      </div>
    </div>
  </div>
</div>
`;
